# iot_nodejs

./: LICENSE  README.md  b.sh  test.ps1
cdemo/: cmd_sys.c  hello.c
cook_server/: Dockerfile  app.js  dockerfile-readme.md  package.json
dart_demo/: mode.json  passCommand.dart  test.md
docs/: IOT业务处理流程图.vsdx  Task.md  timeline.md  ubuntu_startup.sh  ~$测试指令集.xlsx  一般通讯协议.xlsx  串口参考协议.md  协议.docx  协议.md  参考文档.txt  启动流程.md  图片.txt  测试指令集.docx  测试指令集.txt  测试指令集.xlsx  项目清单.md
esp_client/: .gitignore  CMakeLists.txt  Makefile  README.md  event_source.h  partitions.csv  sdkconfig
esp_client/main/: CMakeLists.txt  Kconfig.projbuild  main.c
esp_client/main/component/eventloop/: eventloop.c  eventloop.h
esp_client/main/component/router/: router.c  router.h
esp_client/main/component/sys/: sys.c  sys.h
esp_client/main/component/uart/: uart_p.c  uart_p.h
esp_client/main/component/util/: util.c  util.h
esp_client/main/component/websocket/: p_websocket.c  p_websocket.h
esp_client/main/component/wifi/: wifi_main.c  wifi_main.h  wifi_prov.c  wifi_prov_handlers.c
iot_bin/: .gitignore  mt  mt.ps1  package-lock.json  package.json  readme.md  tsconfig.json  tslint.json
iot_front/: package-lock.json  package.json  readMe.md  tsconfig.json
iot_server/: app.js  package-lock.json  package.json  readMe.md
iot_task/: package-lock.json  package.json
node_client/: client1.js  client2.js  client_device.js  index.js  newDevice.js  package-lock.json  package.json
node_demo/: bufferdemo.js  index.js  kafkacustomer.js  kafkaproducer.js  package-lock.json  package.json  (+2 more)
(+189 files in other folders)
